[project]
name = "fb-library"
version = "0.0.21"
authors = [
  { name="x0pherl"},
]
description = "build123d libraries and utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/x0pherl/fb-library"
Issues = "https://github.com/x0pherl/fb-library/issues"
Documentation = "https://fb-library.readthedocs.org"

[build-system]
requires = ["hatchling", "hatch-vcs"]

build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "manual: marks tests that can only be executed manually",
]